2011-06-24 Erwann Chenede - <erwann.chenede@oracle.com>

	* pixbuf-loaders/pixbuf-loaders-installer.xml
	* icon-cache/icon-cache.xml
	* mime-types-cache/mime-types-cache.xml
	* gconf-cache/gconf-cache.xml
	* desktop-mime-cache/desktop-mime-cache.xml
	* input-method/input-method-cache.xml:
	  added dependent close to work in ROZR setup (Read Only Zone)
	* configure.in: bump to 0.2.4

2011-02-02  Laszlo (Laca) Peter  <laszlo.peter@oracle.com>

	* COPYING: Oraclify
	* configure.in: version bump
	* find_newer: use python 2.6
	* desktop-mime-cache/desktop-mime-cache.xml,
	  gconf-cache/gconf-cache.xml, icon-cache/icon-cache.xml,
	  input-method/input-method-cache.xml,
	  mime-types-cache/mime-types-cache.xml,
	  pixbuf-loaders/pixbuf-loaders-installer.xml: depend on
	  filesystem/minimal instead of filesystem/local.  Apparently
	  minimal > local.  Otherwise it is possible that the services are
	  started before the files they use are available.

2009-05-21  Laszlo (Laca) Peter  <laca@sun.com>

	* configure.in: bump to 0.2.2
	* restart_fmri: handle the case of offline services that are about
	  to go online (start method is still running)

2009-04-29  Laszlo (Laca) Peter  <laca@sun.com>

	* configure.in: bump to 0.2.1
	* desktop-mime-cache/desktop-mime-cache, gconf-cache/gconf-cache,
	  icon-cache/icon-cache, input-method/input-method-cache,
	  mime-types-cache/mime-types-cache,
	  pixbuf-loaders/pixbuf-loaders-installer: check if the corresponding
	  executables exist before trying to call them.

2009-04-02  Laszlo (Laca) Peter  <laca@sun.com>

	* Makefile.am: add find_newer and restart_fmri
	* configure.in: bump to 0.2.0
	* desktop-mime-cache/desktop-mime-cache: use find_newer
	* find_newer: (new) script for finding files based on various
	  filesystem stat times and names
	* gconf-cache/gconf-cache: use find_newer
	* icon-cache/icon-cache: use find_newer
	* input-method/input-method-cache: use find_newer
	* mime-types-cache/mime-types-cache: use find_newer