@@ -42,13 +42,6 @@
 	<create_default_instance enabled='true' />
 
 	<single_instance />
- 
-	<dependent
-                name='gconf_cache-assembly-complete'
-                grouping='optional_all'
-                restart_on='none'>
-                <service_fmri value='svc:/milestone/self-assembly-complete' />
-        </dependent>
 
 	<!-- Need / & /usr filesystems mounted, /var mounted read/write -->
 	<dependency
@@ -58,6 +51,13 @@
 		restart_on='none'>
 		<service_fmri value='svc:/system/filesystem/minimal' />
 	</dependency>
+ 
+	<dependent
+                name='gconf_cache-assembly-complete'
+                grouping='optional_all'
+                restart_on='none'>
+                <service_fmri value='svc:/milestone/self-assembly-complete' />
+        </dependent>
 
 	<!-- Need to be run before gdm is started -->
 	<dependent
